--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -89,6 +89,7 @@ jobs:
     if: always()
     needs:
       - deploy_via_heroku
+    runs-on: ubuntu-latest
     steps:
     - name: Check the deployed service URL
       uses: jtalk/url-health-check-action@v1.2
